refactor: fixing warning on turnOrderTileActions